# MagnetoPy

./: .coverage  .gitattributes  .gitignore  .pylintrc  404.html  CITATION.cff  LICENSE  README.md  classes.html  index.html  mkdocs.yml  objects.inv  packages.html  pyproject.toml  requirements.txt  setup.py
api/cauchy_independent/: index.html
api/cauchy_magnetopy/: index.html
api/cauchy_plotting/: index.html
api/dat_file/: index.html
api/dc_experiment/: index.html
api/experiments_utils/: index.html
api/generic_file/: index.html
api/magnetometry/: index.html
api/mvsh/: index.html
api/parsing_utils/: index.html
api/plot_utils/: index.html
api/simple_mvsh_analysis/: index.html
api/zfcfc/: index.html
docs/: file_formatting.md  index.md  standard_calibration_library.md
docs/api/: analysis.md  cauchy_independent.md  cauchy_magnetopy.md  cauchy_plotting.md  dat_file.md  dc_experiment.md  experiments_utils.md  generic_file.md  magnetometry.md  mvsh.md  parsing_utils.md  plot_utils.md  simple_mvsh_analysis.md  zfcfc.md
docs/examples/: README.md  cauchy.ipynb  dataset1.json  dataset5.json  file_descriptions.md  magnetometry.ipynb  mvsh.ipynb  mvsh_analysis.ipynb  orlova.json  reading_dat_file.ipynb  rwdat_file.ipynb  zfcfc.ipynb
examples/: dataset1.json  dataset5.json  dataset6.json  index.html
examples/cauchy/: index.html
examples/file_descriptions/: index.html
examples/mvsh/: index.html
examples/raw_data/: example_of_raw.ipynb
examples/report_creation/: example_report_creation.ipynb
examples/rwdat_file/: index.html
examples/zfcfc/: index.html
file_formatting/: index.html
magnetopy/: __init__.py  bkg_analysis.py  calibration.py  data_files.py  dataset.py  experiments.py  fits.py  magnetometry.py  parse_qd.py  parsing_utils.py  plot.py  plot_experiments.py  plot_helpers.py  plot_utils.py  sample.py
magnetopy/analyses/: simple_mvsh.py
magnetopy/analyses/cauchy/: fits.py  magpy_compatible.py  plots.py  standalone.py
magnetopy/cli/: calibration_install.py
magnetopy/experiments/: dc_experiment.py  mvsh.py  plot_utils.py  utils.py  zfcfc.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/analysis/: index.html
site/api/dat_file/: index.html
site/api/dc_experiment/: index.html
site/api/experiments_utils/: index.html
site/api/generic_file/: index.html
site/api/magnetometry/: index.html
site/api/mvsh/: index.html
site/api/parsing_utils/: index.html
site/examples/: dataset6.json  index.html
site/file_formatting/: index.html
site/search/: search_index.json
standard_calibration_library/: index.html
tests/: conftest.py  scratch.ipynb  scratch_true_field.ipynb  test_cauchy.py  test_dat_file.py  test_dataset.py  test_experiments.py  test_experiments_mvsh.py  test_experiments_scaling.py  test_experiments_true_field.py  test_experiments_zfcfc.py  test_generic_file.py  test_parse_qd.py  test_parsing_utils.py
tests/data/: README.md  file_descriptions.md
(+19 files in other folders)
